# laser_trace

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: data generators.ipynb  laser trace data org.ipynb  model evaluate.ipynb  test.ipynb  tracking_wires_test_model.ipynb  tracking_wires_train.ipynb  train model.ipynb
src/data/: dataset_generators.py  dataset_tracking.py
src/models/: constants_tracking.py  point_net.py
src/visualization/: visualize_tracking.py
workflow/: config.yaml
