[tool.poetry]
name = "laser_trace"
version = "0.1.0"
description = ""
authors = ["Dmitriy Cherezov <cherezov89@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
snakemake = "^7.8.2"
tensorflow = "2.8.0"
numpy = "^1.22.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
